# lounge-lizard-multi-system-chat

./: .gitignore  Cargo.toml  README.md  build.rs
Slack_lizard/: .env  Cargo.toml  ReadMe.md  manifest.json
Slack_lizard/src/: main.rs
Slack_lizard/src/utils/: mod.rs
Slack_lizard/src/utils/slack/: event_server.rs  ngrok_s.rs
Slack_lizard/src/utils/slack/server_utils/: command_events.rs  error_handler.rs  interaction_events.rs  main_events.rs  mod.rs  push_events.rs  request_server.rs
app/lounge-lizard/: Cargo.toml  Dioxus.toml
loungelizard/: Cargo.toml  Dioxus.toml  README.md  input.css  input.css.orig  tailwind copy.css  tailwind.css
loungelizard/resources/TempProfile/: Local State
loungelizard/resources/TempProfile/Default/: BrowsingTopicsState  History  Preferences  Secure Preferences  Visited Links  Web Data
loungelizard/resources/TempProfile/Default/Cache/Cache_Data/: data_1  index
loungelizard/resources/TempProfile/Default/Code Cache/js/: a70aadffb654ae12_0  ba678a2fbd8c358c_0
loungelizard/resources/TempProfile/Default/Code Cache/js/index-dir/: the-real-index
loungelizard/resources/TempProfile/Default/Code Cache/wasm/index-dir/: the-real-index
loungelizard/resources/TempProfile/Default/DawnGraphiteCache/: data_1  index
loungelizard/resources/TempProfile/Default/DawnWebGPUCache/: data_1  index
loungelizard/resources/TempProfile/Default/Extension Rules/: LOG
loungelizard/resources/TempProfile/Default/Extension Scripts/: LOG
loungelizard/resources/TempProfile/Default/Extension State/: LOG  LOG.old
loungelizard/resources/TempProfile/Default/GCM Store/Encryption/: LOG  LOG.old
loungelizard/resources/TempProfile/Default/GPUCache/: data_1  index
loungelizard/resources/TempProfile/Default/Local Storage/leveldb/: LOG  LOG.old
loungelizard/resources/TempProfile/Default/Network/: Network Persistent State  TransportSecurity
loungelizard/resources/TempProfile/Default/Service Worker/Database/: LOG  LOG.old
loungelizard/resources/TempProfile/Default/Service Worker/ScriptCache/index-dir/: the-real-index
loungelizard/resources/TempProfile/Default/Session Storage/: LOG
loungelizard/resources/TempProfile/Default/Shared Dictionary/cache/index-dir/: the-real-index
loungelizard/resources/TempProfile/Default/Site Characteristics Database/: LOG  LOG.old
loungelizard/resources/TempProfile/Default/Sync Data/LevelDB/: LOG  LOG.old
loungelizard/resources/TempProfile/Default/WebStorage/: QuotaManager  QuotaManager-journal
loungelizard/resources/TempProfile/Default/shared_proto_db/: LOG  LOG.old
loungelizard/resources/TempProfile/Default/shared_proto_db/metadata/: LOG  LOG.old
loungelizard/resources/TempProfile/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  f_000011  index
loungelizard/resources/TempProfile/GraphiteDawnCache/: data_1  index
loungelizard/resources/TempProfile/ShaderCache/: data_1  index
loungelizard/src/: discord_api.rs  main.rs
loungelizard/src/api/: mod.rs
loungelizard/src/api/discord/: discord_api.rs  mod.rs
loungelizard/src/api/mongo_format/: mod.rs  mongo.json  mongo_funcs.rs  mongo_structs.rs
loungelizard/src/api/ms_teams/: mod.rs  ms_teams_api.rs  ms_teams_app_setup.rs
loungelizard/src/api/slack/: config_env.rs  emoji.rs  event_server.rs  mod.rs  ngrok_s.rs
loungelizard/src/api/slack/manifest/: manifest.json
loungelizard/src/api/slack/server_utils/: command_events.rs  coroutine_enums.rs  error_handler.rs  interaction_events.rs  main_events.rs  mod.rs  push_events.rs  request_server.rs  setup_server.rs
loungelizard/src/comp/: slack.rs
loungelizard/src/front_ends/: Slack.rs  mod.rs
loungelizard/src/logins/: Discord.rs  Home.rs  MSTeams.rs  Slack.rs  mod.rs
loungelizard/src/pages/: Discord.rs  Home.rs  MSTeam.rs  Slack.rs  mod.rs
ms-teams-lizard/: Cargo.toml  tokens.env
ms-teams-lizard/src/: main.rs
src/: discord_api.rs  main.rs
src/ui/: login.slint  main.slint
