[package]
name = "LoungeLizard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
slack-morphism = {version = "2.1", features = ["hyper", "axum"]}
bytes = "1"
http-body-util = "0.1"
hyper = { version ="1.3", features = ["http2","server", "client"]}
hyper-util = { version = "0.1", features = ["client", "client-legacy", "server"]}
tokio = { version = "1", features = ["bytes","rt-multi-thread","signal","tracing"]}
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version ="0.3", features = ["env-filter"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
url = "2.5.2"
reqwest = { version = "0.11", features = ["json"] }

