[package]
name = "loungelizard"
version = "0.1.0"
authors = ["kylehoahoang <128729118+kylehoahoang@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["desktop", "router"] }

# Debug
dioxus-logger = "0.5.1"
futures = "0.3.30"
futures-util = "0.3.30"
gloo-timers = "0.3.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = "1.0.210"
serde_json = "1.0.128"
tokio = "1.40.0"
