[package]
name = "loungelizard"
version = "0.1.0"
authors = ["kylehoahoang <128729118+kylehoahoang@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"

dioxus = { version = "0.5", features = ["desktop", "router"] }
dioxus-router = "0.2"
clipboard-rs = "0.2.1"    

# Debug
dioxus-logger = "0.5.1"
futures = "0.3.30"
futures-util = "0.3.30"
gloo-timers = "0.3.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio =  { version = "1.40.0", features = ["full"] }
webview = "0.1.1"
dioxus-desktop = "0.5.6"
lazy_static = "1.5.0"
regex = "1.11.0"
bson = "2.13.0"

# Slack Specific
# openssl = { version = "0.10", features = ["vendored"] }
slack-morphism = {version = "2.1", features = ["hyper", "axum"]}
bytes = "1"
http-body-util = "0.1"
hyper = { version ="1.3", features = ["http2","server", "client"]}
hyper-util = { version = "0.1", features = ["client", "client-legacy", "server"]}
tracing = "0.1"
dotenv = "0.15.0"
url = "2.5.2"
#aws-lc-rs = { version = "1", features = ["bindgen"] }


[dependencies.mongodb]
version = "3.1.0"
features = ["sync"]
